--- a/src/index.css
+++ b/src/index.css
@@ -236,4 +236,50 @@ button {
   resize: none;
 }
 
+.entry-tiles{
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  gap: -10px 100px;
+}
+
+.entry-tile{
+  width: 60%;
+  border-radius: 0;
+  /* box-shadow: 0px 10px 8px #999; */
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem;
+  background-color: purple;
+  /* height: fit-content; */
+  height: 25vh;
+  padding: 5px;
+  color: white;
+  border-radius: 10px;
+}
+
+.entry-tile p{
+  font-size: larger;
+  text-transform: capitalize;
+  
+}
+
+.entry-detail{
+  position: relative;
+  top: 60px;
+  width: 40%;
+  margin: auto auto;
+  height: 70%;
+  border: solid 1px teal;
+  padding: 20px 40px;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  background-color: #292727;
+  color: white;
+}
+
+.entry-detail p{
+  text-align: justify;
+  
+}
+
 
