--- a/src/index.css
+++ b/src/index.css
@@ -40,9 +40,15 @@ button {
   box-shadow: 0px 0px 10px #999;
   display: flex;
   height: 10vh;
-  width: 80vw;
+  width: 100vw;
 }
 
+.dashboard-header{
+  box-shadow: 0px 0px 10px #999;
+  display: flex;
+  height: 10vh;
+  width: 80vw;
+}
 .header ul {
   display: flex;
   flex-direction: row;
@@ -62,7 +68,7 @@ button {
   text-decoration: none;
 }
 
-.header h1{
+.dashboard-header h1{
   text-align: center;
   font-size: larger;
   width: 100px;
@@ -163,7 +169,8 @@ button {
   overflow: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
-  padding-left: 70px;
+  padding-left: 200px;
+  padding-top: 70px;
 }
 
 .dark {
@@ -172,7 +179,7 @@ button {
 }
 
 .light {
-  background-color: rgb(236, 226, 226);
+  background-color: rgb(255, 255, 255);
   color: rgb(34, 33, 33);
 }
 
@@ -304,7 +311,7 @@ button {
   /* height: fit-content; */
   height: 30vh;
   padding: 5px;
-  color: white;
+  color: black;
   border-radius: 10px;
 }
 
@@ -337,6 +344,12 @@ button {
 .entry-detail p{
   text-align: justify;
   
+}
+
+.entries{
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
 }
 
 
