--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,8 @@ button {
   height: 30px;
   border-radius: 5px;
   border: 0px;
-  background-color: white;
-  color: rgb(22, 201, 201);
+  background-color: rgb(212, 14, 146);
+  color: white;
 }
 
 .logo {
@@ -61,7 +61,7 @@ button {
   font-size: 17px;
   line-height: normal;
   cursor: pointer;
-  color: black;
+  color: rgb(212, 14, 146);
   position: relative;
   top: 15px;
   left: 700px;
