--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ button {
   display: flex;
   height: 10vh;
   width: 100vw;
+  background-color: rgb(27, 221, 221);
 }
 
 .dashboard-header{
@@ -286,7 +287,7 @@ button {
   border-top: 0px;
   border-left: 0px;
   border-width: 0px;
-  border-bottom: solid 1px white;
+  border-bottom: solid 1px rgb(212, 14, 146);
   outline: none;
   color: white;
   overflow-y: scroll;
