--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,21 @@ body {
 }
 
 main {
-  margin: 0px;
+  margin-left: 0;
   height: 100vh;
   width: 100vw;
   background-color: rgb(26, 202, 202);
   background-image: linear-gradient(to right, rgb(35, 202, 202), pink);
+}
+
+.main{
+  position: absolute;
+  top: 66px;
+  left: 273px;
+  width: 79vw;
+  height: 89.7vh;
+  background-color: transparent;
+
 }
 
 h1,
@@ -176,7 +186,7 @@ button {
   overflow: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
-  padding-left: 200px;
+  padding-left: 220px;
   padding-top: 70px;
 }
 
@@ -308,7 +318,7 @@ button {
 }
 
 .entry-tile{
-  width: 60%;
+  width: 80%;
   border-radius: 0;
   /* box-shadow: 0px 10px 8px #999; */
   display: flex;
@@ -354,9 +364,9 @@ button {
 }
 
 .entries{
-  background-color: white;
-  width: 100vw;
-  height: 100vh;
+  background-color: transparent;
+  width: 80vw;
+  height: 89vh;
 }
 
 .photo{
@@ -385,4 +395,10 @@ button {
   display: flex;
   flex-direction: row;
   gap: 120px;
+}
+
+.trash{
+  height: 89vh;
+  width: 79.8vw;
+  background-color: transparent;
 }
