--- a/src/index.css
+++ b/src/index.css
@@ -246,11 +246,11 @@ button {
 
 .inactive {
   width: 18vw;
-  height: 40px;
+  height: 30px;
   list-style: none;
   border-radius: 0px 20px 20px 0px;
   padding-left: 20px;
-  padding-top: 15px;
+  padding-top: 3px;
 }
 
 .inactive:hover {
@@ -260,11 +260,11 @@ button {
 .active {
   background-color: rgb(35, 202, 202);
   width: 18vw;
-  height: 40px;
+  height: 30px;
   list-style: none;
   border-radius: 0px 20px 20px 0px;
   padding-left: 20px;
-  padding-top: 15px;
+  padding-top: 3px;
 }
 
 .active:hover {
@@ -424,12 +424,20 @@ button {
 }
 
 .trash-tile{
-  width: 130px;
-  height: 70px;
+  width: 220px;
+  height: 30vh;
   background-color: rgb(35, 202, 202);
+  padding: 10px;
 }
 
 .trash-tile h3{
   text-align: center;
   text-transform: capitalize;
+}
+
+.decrypt{
+  width: 100%;
+  height: 18vh;
+  word-wrap: break-word;
+  text-overflow: ellipsis;
 }
