--- a/src/index.css
+++ b/src/index.css
@@ -277,8 +277,8 @@ button {
 }
 
 .add-entry{
-  width: 40%;
-  height: 70vh;
+  width: 70%;
+  height: 80vh;
   margin: 2% auto;
   background-color: #1b1a1a;
   border: solid 0px;
@@ -289,7 +289,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 20px;
+  padding: 40px 20px 20px;
 }
 
 .add-entry input, textarea{
@@ -302,12 +302,12 @@ button {
   color: white;
   overflow-y: scroll;
   scrollbar-width: none;
-  text-transform: capitalize;
+  text-transform:capitalize;
   
 }
 
 .add-entry textarea{
-  height: 40vh;
+  height: 50vh;
   resize: none;
 }
 
@@ -367,6 +367,9 @@ button {
   background-color: transparent;
   width: 80vw;
   height: 89vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
 
 .photo{
@@ -384,7 +387,7 @@ button {
   list-style: none;
   right: 100px;
   top: 50px;
-  height: 80px;
+  height: auto;
   padding: 20px 10px;
   display: flex;
   flex-direction: column;
@@ -414,7 +417,7 @@ button {
 .date{
   display: flex;
   flex-direction: row;
-  gap: 120px;
+  gap: 350px;
 }
 
 .trash{
@@ -461,4 +464,46 @@ button {
   height: 18vh;
   word-wrap: break-word;
   text-overflow: ellipsis;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.modal {
+  position: fixed;
+  top: 20vh;
+  left: 5%;
+  width: 80vw;
+  height: 50vh;
+  background-color: rgb(0, 0, 0);
+  padding: 1rem;
+  color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  z-index: 30;
+  animation: slide-down 300ms ease-out forwards;
+}
+
+@media (min-width: 768px) {
+  .modal {
+    width: 40rem;
+    left: calc(50% - 20rem);
+  }
+}
+
+@keyframes slide-down {
+  from {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
