--- a/src/index.css
+++ b/src/index.css
@@ -11,14 +11,13 @@ main {
   background-image: linear-gradient(to right, rgb(35, 202, 202), pink);
 }
 
-.main{
+.main {
   position: absolute;
   top: 66px;
   left: 273px;
   width: 79vw;
   height: 89.7vh;
   background-color: transparent;
-
 }
 
 h1,
@@ -54,7 +53,7 @@ button {
   background-color: rgb(27, 221, 221);
 }
 
-.dashboard-header{
+.dashboard-header {
   box-shadow: 0px 0px 10px #999;
   display: flex;
   height: 10vh;
@@ -79,7 +78,7 @@ button {
   text-decoration: none;
 }
 
-.dashboard-header h1{
+.dashboard-header h1 {
   text-align: center;
   font-size: larger;
   width: 100px;
@@ -93,7 +92,7 @@ button {
   width: 50vw;
 }
 
-.title h1{
+.title h1 {
   color: white;
   -webkit-text-stroke-color: rgb(212, 14, 146);
   -webkit-text-stroke-width: 2px;
@@ -176,13 +175,13 @@ button {
   flex-direction: row;
 }
 
-.dashboard-main{
+.dashboard-main {
   display: flex;
   flex-direction: column;
   gap: 20px;
   width: 80vw;
 }
-.dashboard-main-main{
+.dashboard-main-main {
   overflow: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
@@ -217,31 +216,29 @@ button {
   top: 7px;
 }
 
-.recent-entries{
-  border-top: solid 1px ;
+.recent-entries {
+  border-top: solid 1px;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-.recent-entries h2{
+.recent-entries h2 {
   color: rgb(35, 202, 202);
   text-align: center;
   font-size: large;
   font-weight: 400;
 }
 
-.recent-entries p{
+.recent-entries p {
   padding-left: 25px;
   text-decoration: none;
   color: #292727;
   text-transform: capitalize;
-  
 }
 
-.recent-entries div{
+.recent-entries div {
   height: 40px;
-  
 }
 
 .inactive {
@@ -271,12 +268,12 @@ button {
   background-color: rgb(35, 202, 202);
 }
 
-.dashboard-logo{
+.dashboard-logo {
   padding: 30px 60px;
   font-size: 30px;
 }
 
-.add-entry{
+.add-entry {
   width: 70%;
   height: 80vh;
   margin: 2% auto;
@@ -285,14 +282,15 @@ button {
   border-radius: 10px;
 }
 
-.add-entry form{
+.add-entry form {
   display: flex;
   flex-direction: column;
   gap: 20px;
   padding: 40px 20px 20px;
 }
 
-.add-entry input, textarea{
+.add-entry input,
+textarea {
   background-color: transparent;
   border-top: 0px;
   border-left: 0px;
@@ -302,22 +300,21 @@ button {
   color: white;
   overflow-y: scroll;
   scrollbar-width: none;
-  text-transform:capitalize;
-  
+  text-transform: capitalize;
 }
 
-.add-entry textarea{
+.add-entry textarea {
   height: 50vh;
   resize: none;
 }
 
-.entry-tiles{
+.entry-tiles {
   display: grid;
   grid-template-columns: 30% 30% 30%;
   gap: -10px 100px;
 }
 
-.entry-tile{
+.entry-tile {
   width: 70%;
   border-radius: 0;
   /* box-shadow: 0px 10px 8px #999; */
@@ -330,15 +327,16 @@ button {
   padding: 5px;
   color: black;
   border-radius: 10px;
+  animation: slide-down 300ms ease-out forwards;
 }
 
-.entry-tile p{
+.entry-tile p {
   font-size: larger;
   text-transform: capitalize;
-  text-align: center; 
+  text-align: center;
 }
 
-.entry-detail{
+.entry-detail {
   position: relative;
   top: 60px;
   width: 30%;
@@ -352,18 +350,17 @@ button {
   color: white;
 }
 
-.entry-detail h1{
+.entry-detail h1 {
   text-align: center;
   text-transform: uppercase;
   color: rgb(14, 238, 238);
 }
 
-.entry-detail p{
+.entry-detail p {
   text-align: justify;
-  
 }
 
-.entries{
+.entries {
   background-color: transparent;
   width: 80vw;
   height: 89vh;
@@ -372,14 +369,14 @@ button {
   scrollbar-width: none;
 }
 
-.photo{
+.photo {
   border-radius: 100%;
   width: 40px;
   height: 40px;
   padding: 15px 50px;
 }
 
-.dropdown-menu{
+.dropdown-menu {
   position: absolute;
   min-width: 160px;
   z-index: 1;
@@ -394,7 +391,11 @@ button {
   gap: 20px;
 }
 
-.toggle-menu{
+.dropdown-menu li {
+  cursor: pointer;
+}
+
+.toggle-menu {
   position: absolute;
   min-width: 140px;
   z-index: 1;
@@ -410,23 +411,26 @@ button {
   border-radius: 10px;
 }
 
-.toggle-menu li{
+.toggle-menu li {
   cursor: pointer;
 }
 
-.date{
+.date {
   display: flex;
   flex-direction: row;
   gap: 350px;
 }
 
-.trash{
+.trash {
   height: 89vh;
   width: 79.8vw;
   background-color: transparent;
+  overflow: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
 
-.trash p{
+.trash p {
   font-size: 1.5rem;
   margin: 0;
   padding: 0;
@@ -437,29 +441,32 @@ button {
   transform: translateX(-50%) translateY(-50%);
 }
 
-.trash-tiles{
+.trash-tiles {
   display: grid;
-  grid-template-columns: 30% 30% 30%;
-  gap: 70px;
-  position: absolute;
+  grid-template-columns: 25% 25% 25%;
+  gap: 30px 0px;
+  position: relative;
   top: 50px;
   left: 100px;
+  margin: 0%;
+  
 }
 
-.trash-tile{
+.trash-tile {
   width: 220px;
   height: 30vh;
   background-color: rgb(35, 202, 202);
   padding: 10px;
   border-radius: 10px;
+  animation: slide-down 300ms ease-out forwards;
 }
 
-.trash-tile h3{
+.trash-tile h3 {
   text-align: center;
   text-transform: capitalize;
 }
 
-.decrypt{
+.decrypt {
   width: 100%;
   height: 18vh;
   word-wrap: break-word;
@@ -478,16 +485,29 @@ button {
 
 .modal {
   position: fixed;
-  top: 20vh;
+  top: 5vh;
   left: 5%;
   width: 80vw;
-  height: 50vh;
-  background-color: rgb(0, 0, 0);
+  height: 85vh;
   padding: 1rem;
-  color: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
+}
+
+.view-profile{
+  padding: 40px;
+}
+
+.view-profile input{
+width: 18vw;
+height: 30px;
+}
+
+.profile-input{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 @media (min-width: 768px) {
