Added speech-to-text functionality

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ button {
   height: 30px;
   border-radius: 5px;
   border: 0px;
-  background-color: rgb(212, 14, 146);
+  background-color: rgb(35, 202, 202);
   color: white;
 }
 
@@ -119,7 +119,7 @@ button {
 
 .signin-box {
   width: 30%;
-  height: 70vh;
+  height: auto;
   border: solid 1px rgb(35, 202, 202);
   border-radius: 1%;
   position: relative;
@@ -159,7 +159,7 @@ button {
 }
 .signin-box p {
   text-align: center;
-  padding: 0px;
+  padding-bottom: 20px;
 }
 
 .err {
@@ -295,7 +295,7 @@ textarea {
   border-top: 0px;
   border-left: 0px;
   border-width: 0px;
-  border-bottom: solid 1px rgb(212, 14, 146);
+  border-bottom: solid 1px rgb(35, 202, 202);
   outline: none;
   color: white;
   overflow-y: scroll;
@@ -517,6 +517,53 @@ height: 30px;
     width: 40rem;
     left: calc(50% - 20rem);
   }
+}
+
+
+
+@media(max-width: 767px) {
+ .signin {
+  width: 100%;
+  height: 100%;
+ }
+
+ .signin-box{
+  width: 70%;
+  height: auto;
+ }
+
+ .signin-box input{
+  width: 95%;
+ }
+
+ .signin-box p{
+  padding-bottom: 20px;
+ }
+
+ .entry-tiles {
+  display: grid;
+  grid-template-columns: 100%;
+  gap: 20px;
+  padding-bottom: 100px;
+  
+}
+
+.dashboard-main-main {
+  overflow: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  padding-left: 10px;
+  padding-top: 70px;
+}
+.main{
+  position: absolute;
+  left: 85px;
+  top: 100px;
+}
+.entry-tile{
+  width: 90%;
+}
+
 }
 
 @keyframes slide-down {
