--- a/src/index.css
+++ b/src/index.css
@@ -512,6 +512,19 @@ height: 30px;
   gap: 10px;
 }
 
+.coming-soon{
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
 @media (min-width: 768px) {
   .modal {
     width: 40rem;
