--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,12 @@ main {
   margin-left: 0;
   height: 100vh;
   width: 100vw;
-  background-color: rgb(26, 202, 202);
-  background-image: linear-gradient(to right, rgb(35, 202, 202), pink);
+  /* background-color: rgb(26, 202, 202);
+  background-image: linear-gradient(to right, rgb(35, 202, 202), pink); */
+  background-image: url('./assets/horizontal-view-closed-blue-notebook-pen-lying-white-background.jpg');
+  background-size:  cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .main {
@@ -36,21 +40,21 @@ button {
   border-radius: 5px;
   border: 0px;
   background-color: rgb(35, 202, 202);
-  color: white;
+  color: black;
 }
 
 .logo {
   font-family: cursive;
   color: rgb(0, 0, 0);
-  padding: 30px 60px;
+  padding: 30px 160px;
 }
 
 .header {
-  box-shadow: 0px 0px 10px #999;
+  /* box-shadow: 0px 0px 10px #999; */
   display: flex;
   height: 10vh;
   width: 100vw;
-  background-color: rgb(27, 221, 221);
+  background-color: transparent;
 }
 
 .dashboard-header {
@@ -87,14 +91,16 @@ button {
 }
 
 .title {
-  padding: 80px 60px;
+  position: absolute;
+  left: 50%;
+  padding: 80px 0px;
   font-size: 40px;
   width: 50vw;
 }
 
 .title h1 {
-  color: white;
-  -webkit-text-stroke-color: rgb(212, 14, 146);
+  color: black;
+  /* -webkit-text-stroke-color: rgb(212, 14, 146); */
   -webkit-text-stroke-width: 2px;
 }
 
