--- a/src/index.css
+++ b/src/index.css
@@ -534,7 +534,7 @@ textarea {
   height: 100vh;
   background-color: rgb(35, 202, 202);
 }
-.loading h3 {
+.loading-body {
   font-size: 1.3rem;
   margin: 0;
   padding: 0;
