--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,10 @@ button {
   height: 10vh;
   width: 80vw;
 }
+
+.dashboard-header p{
+  padding: 20px 0px 0px 20px;
+}
 .header ul {
   display: flex;
   flex-direction: row;
@@ -408,6 +412,7 @@ textarea {
   gap: 20px;
   z-index: 0;
 }
+
 
 .entry-list {
   height: 10vh;
