--- a/src/index.css
+++ b/src/index.css
@@ -705,6 +705,24 @@ textarea {
   width: 70%;
   height: 30px;
 }
+
+.mobile-warning {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 1);
+  color: white;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  z-index: 9999;
+}
+
 @media (min-width: 768px) {
   .modal {
     width: 40rem;
